Fixed height on safari

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -68,7 +68,6 @@
 }
 
 .joystick {
-  height: 100%;
   padding-top: 60px;
   background: #4ebfdf;
   width: 120px;
